swag doc fix
