# golang/app/docs/swagger.json
@@ -34,6 +34,13 @@
                 "operationId": "create_sighting",
                 "parameters": [
                     {
+                        "type": "file",
+                        "description": "Image Upload",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "description": "Request payload",
                         "name": "Body",
                         "in": "body",
@@ -112,6 +119,13 @@
                 "operationId": "create_tiger",
                 "parameters": [
                     {
+                        "type": "file",
+                        "description": "Image Upload",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "description": "Request payload",
                         "name": "Body",
                         "in": "body",
@@ -171,27 +185,33 @@
             "properties": {
                 "birthday": {
                     "description": "Date of birth of the tiger. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2005-12-30"
                 },
                 "image": {
-                    "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "description": "path to uploaded image.",
+                    "type": "string",
+                    "example": "path/to/image"
                 },
                 "last_seen": {
                     "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2019-08-01"
                 },
                 "latitude": {
                     "description": "Last seen Latitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 120.51687
                 },
                 "longitude": {
                     "description": "Last seen Longitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 50.894914
                 },
                 "name": {
                     "description": "Name of the tiger",
-                    "type": "string"
+                    "type": "string",
+                    "example": "tiger08"
                 }
             }
         },
@@ -199,24 +219,29 @@
             "type": "object",
             "properties": {
                 "image": {
-                    "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "description": "path to uploaded image.",
+                    "type": "string",
+                    "example": "path/to/image"
                 },
                 "last_seen": {
                     "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2019-08-01"
                 },
                 "latitude": {
                     "description": "Last seen Latitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 120.51687
                 },
                 "longitude": {
                     "description": "Last seen Longitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 50.894914
                 },
                 "tiger_id": {
                     "description": "id of the tiger",
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 7
                 }
             }
         },
@@ -235,7 +260,8 @@
                         },
                         "total_results": {
                             "description": "totals number of results found for the given query",
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 20
                         }
                     }
                 },
@@ -245,11 +271,13 @@
                     "properties": {
                         "error": {
                             "description": "Whether the current response processed successfully",
-                            "type": "boolean"
+                            "type": "boolean",
+                            "example": true
                         },
                         "message": {
                             "description": "Error message incase of any error.",
-                            "type": "string"
+                            "type": "string",
+                            "example": "some error information"
                         }
                     }
                 }
@@ -270,7 +298,8 @@
                         },
                         "total_results": {
                             "description": "totals number of results found for the given query",
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 20
                         }
                     }
                 },
@@ -280,11 +309,13 @@
                     "properties": {
                         "error": {
                             "description": "Whether the current response processed successfully",
-                            "type": "boolean"
+                            "type": "boolean",
+                            "example": true
                         },
                         "message": {
                             "description": "Error message incase of any error.",
-                            "type": "string"
+                            "type": "string",
+                            "example": "some error information"
                         }
                     }
                 }
@@ -299,11 +330,13 @@
                     "properties": {
                         "sighting_id": {
                             "description": "primay key for sighting",
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 12
                         },
                         "tiger_id": {
                             "description": "id of the tiger",
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 7
                         }
                     }
                 },
@@ -313,11 +346,13 @@
                     "properties": {
                         "error": {
                             "description": "Whether the current response processed successfully",
-                            "type": "boolean"
+                            "type": "boolean",
+                            "example": true
                         },
                         "message": {
                             "description": "Error message incase of any error.",
-                            "type": "string"
+                            "type": "string",
+                            "example": "some error information"
                         }
                     }
                 }
@@ -328,35 +363,43 @@
             "properties": {
                 "birthday": {
                     "description": "Date of birth of the tiger. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2005-12-30"
                 },
                 "image": {
-                    "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "description": "path to uploaded image.",
+                    "type": "string",
+                    "example": "path/to/image"
                 },
                 "last_seen": {
                     "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2019-08-01"
                 },
                 "latitude": {
                     "description": "Last seen Latitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 120.51687
                 },
                 "longitude": {
                     "description": "Last seen Longitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 50.894914
                 },
                 "name": {
                     "description": "Name of the tiger",
-                    "type": "string"
+                    "type": "string",
+                    "example": "tiger08"
                 },
                 "sighting_id": {
                     "description": "primay key for sighting",
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 12
                 },
                 "tiger_id": {
                     "description": "id of the tiger",
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 7
                 }
             }
         },
@@ -364,20 +407,24 @@
             "type": "object",
             "properties": {
                 "image": {
-                    "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "description": "path to uploaded image.",
+                    "type": "string",
+                    "example": "path/to/image"
                 },
                 "last_seen": {
                     "description": "Timestamp when the tiger was last seen. Must be in YYYY-MM-DD format.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "2019-08-01"
                 },
                 "latitude": {
                     "description": "Last seen Latitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 120.51687
                 },
                 "longitude": {
                     "description": "Last seen Longitude point",
-                    "type": "number"
+                    "type": "number",
+                    "example": 50.894914
                 }
             }
         },
@@ -386,7 +433,8 @@
             "properties": {
                 "tiger_id": {
                     "description": "id of the tiger",
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 7
                 }
             }
         }
